--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Projet TPE - Nicolas Aymes / Justin Ageorges / Antoine Touzart</title>
-        <link rel="stylesheet" href="css/normalize.min.css">
+        <meta name="robots" content="noindex">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/styles.css">
         <script src="js/jquery-3.3.1.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
         <script src="js/script.js"></script>
     </head>
 
