Add header and footer

--- a/index.html
+++ b/index.html
@@ -12,15 +12,23 @@
 
     <body>
         <!-- Imported header -->
-        <header id="header"></header>
+        <header id="header" class="row"></header>
 
         <!-- Main section -->
-        <main role="main">
+        <main role="main" class="row">
+            <section class="col-12">
+                <img src="img/electronics-grass-lawn-532559.jpg" alt="VR Headset" class="img-fluid">
+            </section>
 
+            <aside class="summary"></aside>
+
+            <section class="container">
+                <p>Hello world</p>
+            </section>
         </main>
 
         <!-- Imported footer -->
-        <footer id="header"></footer>
+        <footer id="footer" class="footer"></footer>
 
         <script src="js/jquery-3.3.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
