--- a/index.html
+++ b/index.html
@@ -6,26 +6,74 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Projet TPE - Nicolas Aymes / Justin Ageorges / Antoine Touzart</title>
         <meta name="robots" content="noindex">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/styles.css">
     </head>
 
     <body>
         <!-- Imported header -->
-        <header id="header" class="row"></header>
+        <header id="header"></header>
 
         <!-- Main section -->
         <main role="main" class="row">
             <section class="col-12">
-                <img src="img/electronics-grass-lawn-532559.jpg" alt="VR Headset" class="img-fluid">
+                <img src="img/BGtest.jpg" alt="VR Headset" class="img-fluid">
             </section>
 
-            <aside class="summary"></aside>
+            <section class="col-12 tpe-1">
+                <div class="container">
+                <h3 class="text-center choice-title">Le choix du sujet</h3>
+                <br>
+                    <!-- Picto -->
+                    <div class="text-center">
+                        <div class="circle">
+                            <i class="fas fa-crosshairs picto-big"></i>
+                        </div>
+                    </div>
 
-            <section class="container">
-                <p>Hello world</p>
+                    <br>
+                    <p class="text-center choice">
+                        Le sujet a était choisi à était choisi très facilement, Justin, Antoine et moi étant fans de nouvelles technologies.<br>
+                        Le sujet fut choisi à l'unanimité par nous trois.
+                    </p>
             </section>
-        </main>
+
+            <section class="col-12 tpe-2">
+                <div class="container">
+                <h3 class="text-center choice-title">Qu'est ce que la réalité virtuelle ?</h3>
+                <br>
+                <!-- Picto -->
+                <div class="text-center">
+                    <div class="circle bg-white">
+                        <i class="fas fa-vr-cardboard picto"></i>
+                    </div>
+                </div>
+
+                <br>
+                <p class="text-center choice">
+                    La réalité virtuelle est une technologie qui permet de plonger une personne dans un monde artificiel créé numériquement.<br>
+                    Il peut s'agir d'une reproduction du monde réel ou bien d'un univers totalement imaginaire.<br>
+                    L'expérience est à la fois visuelle, auditive et, dans certains cas, haptique avec la production d'un retour d'effets.<br>
+                </p>
+            </section>
+            <section class="col-12 tpe-3">
+                    <div class="container">
+                    <h3 class="text-center choice-title">Sur quoi porte notre sujet ?</h3>
+                    <br>
+                        <!-- Picto -->
+                        <div class="text-center">
+                            <div class="circle">
+                                 <i class="fas fa-question picto"></i>
+                            </div>
+                        </div>
+
+                        <br>
+                        <p class="text-center choice">
+                            Notre sujet porte sur l'usage de casque de réalité au sein de l'éducation, professionnel et éducatif.<br>
+                            Notre problématique étant : "Comment la réalite virtuelle pourrait être utile à l’éducation ?"
+                            </p>
+                    </main>
 
         <!-- Imported footer -->
         <footer id="footer" class="footer"></footer>
