--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
 
         <!-- Main section -->
         <main role="main" class="row">
-            <section class="col-12">
-                <img src="img/BGtest.jpg" alt="VR Headset" class="img-fluid">
-            </section>
+            <div class="jumbotron jumbotron-fluid hero-banner">
+                <div class="container">
+                    <h1 class="display-4">Fluid jumbotron</h1>
+                    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                </div>
+            </div>
 
             <section class="col-12 tpe-1">
                 <div class="container">
-                <h3 class="text-center choice-title">Le choix du sujet</h3>
-                <br>
+                    <h3 class="text-center choice-title">Le choix du sujet</h3>
+                    <br>
                     <!-- Picto -->
                     <div class="text-center">
                         <div class="circle">
@@ -37,28 +40,30 @@
                         Le sujet a était choisi à était choisi très facilement, Justin, Antoine et moi étant fans de nouvelles technologies.<br>
                         Le sujet fut choisi à l'unanimité par nous trois.
                     </p>
+                </div>
             </section>
 
             <section class="col-12 tpe-2">
                 <div class="container">
-                <h3 class="text-center choice-title">Qu'est ce que la réalité virtuelle ?</h3>
-                <br>
-                <!-- Picto -->
-                <div class="text-center">
-                    <div class="circle bg-white">
-                        <i class="fas fa-vr-cardboard picto"></i>
+                    <h3 class="text-center choice-title">Qu'est ce que la réalité virtuelle ?</h3>
+                    <br>
+                    <!-- Picto -->
+                    <div class="text-center">
+                        <div class="circle bg-white">
+                            <i class="fas fa-vr-cardboard picto"></i>
+                        </div>
                     </div>
-                </div>
 
-                <br>
-                <p class="text-center choice">
-                    La réalité virtuelle est une technologie qui permet de plonger une personne dans un monde artificiel créé numériquement.<br>
-                    Il peut s'agir d'une reproduction du monde réel ou bien d'un univers totalement imaginaire.<br>
-                    L'expérience est à la fois visuelle, auditive et, dans certains cas, haptique avec la production d'un retour d'effets.<br>
-                </p>
+                    <br>
+                    <p class="text-center choice">
+                        La réalité virtuelle est une technologie qui permet de plonger une personne dans un monde artificiel créé numériquement.<br>
+                        Il peut s'agir d'une reproduction du monde réel ou bien d'un univers totalement imaginaire.<br>
+                        L'expérience est à la fois visuelle, auditive et, dans certains cas, haptique avec la production d'un retour d'effets.<br>
+                    </p>
+                </div>
             </section>
-            <section class="col-12 tpe-3">
-                    <div class="container">
+            <section class="col-12 tpe-1">
+                <div class="container">
                     <h3 class="text-center choice-title">Sur quoi porte notre sujet ?</h3>
                     <br>
                         <!-- Picto -->
@@ -73,7 +78,9 @@
                             Notre sujet porte sur l'usage de casque de réalité au sein de l'éducation, professionnel et éducatif.<br>
                             Notre problématique étant : "Comment la réalite virtuelle pourrait être utile à l’éducation ?"
                             </p>
-                    </main>
+                </div>
+            </section>
+        </main>
 
         <!-- Imported footer -->
         <footer id="footer" class="footer"></footer>
