--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <main role="main" class="row">
             <div class="jumbotron jumbotron-fluid hero-banner">
                 <div class="container">
-                    <h1 class="display-4">Fluid jumbotron</h1>
-                    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                    <h1 class="display-4">La réalité virtuelle</h1>
+                    <p class="lead">L'usage de la réalité virtuelle dans l'éducation</p>
                 </div>
             </div>
 
@@ -37,7 +37,7 @@
 
                     <br>
                     <p class="text-center choice">
-                        Le sujet a était choisi à était choisi très facilement, Justin, Antoine et moi étant fans de nouvelles technologies.<br>
+                        Le sujet a était choisi très facilement, Justin, Antoine et moi étant fans de nouvelles technologies.<br>
                         Le sujet fut choisi à l'unanimité par nous trois.
                     </p>
                 </div>
@@ -58,7 +58,8 @@
                     <p class="text-center choice">
                         La réalité virtuelle est une technologie qui permet de plonger une personne dans un monde artificiel créé numériquement.<br>
                         Il peut s'agir d'une reproduction du monde réel ou bien d'un univers totalement imaginaire.<br>
-                        L'expérience est à la fois visuelle, auditive et, dans certains cas, haptique avec la production d'un retour d'effets.<br>
+                        L'expérience est à la fois visuelle, auditive et, dans certains cas, haptique avec la production d'un retour d'effets.
+                        Il ne faut pas confondre la réalité virtuelle de la réalite augmenté qui sont toutes deux différentes. <br>
                     </p>
                 </div>
             </section>
