--- a/histoire.html
+++ b/histoire.html
@@ -18,7 +18,7 @@
         <main role="main" class="row">
                 <section class="col-12 tpe-1">
                         <div class="container">
-                            cL'histoire de la réalité virtuelle</h3>
+                            <h3>L'histoire de la réalité virtuelle</h3>
                                     </div>
                     
                                     
@@ -91,8 +91,8 @@
                     <br>
                     <p class="text-right choice">
                           Dans les années 1980, le terme « réalité virtuelle » est popularisé par Jaron Lanier, l'un des pionniers du domaine de la réalité virtuelle.
-                          En 1985, Lanier fonde la société VPL Research, société à l'origine de la création de plusieurs appareils VR comme le Data Glove[10],
-                          l'Eye Phone[11]|[12], et le Audio Sphere. VPL Research autorise l'utilisation du Data Glove par l'entreprise de jeu de société Mattel. 
+                          En 1985, Lanier fonde la société VPL Research, société à l'origine de la création de plusieurs appareils VR comme le Data Glove,
+                          l'Eye Phone, et le Audio Sphere. VPL Research autorise l'utilisation du Data Glove par l'entreprise de jeu de société Mattel. 
                           Mattel a utilisé cette technologie et créé un accessoire connu sous le nom Power Glove. Difficile à utiliser, le Power Glove, vendu 100 $, est peu populaire auprès des consommateurs. 
                           La popularisation du concept de réalité virtuelle est alors à cette époque essentiellement due à des œuvres cinématographiques comme Brainstorm (1983)
                            et The Lawnmower Man et à la publication de livres comme Virtual Reality d'Howard Rheingold, 
